# BLACKJACK_EDIT_DIVIDED

./: BLACKJACK_EDIT_DIVIDED_ja_JP.ts  BlackjackGame.cpp  BlackjackGame.h  BlackjackWindow.cpp  BlackjackWindow.h  CMakeLists.txt  Card.h  README.md  main.cpp  resources.qrc
src/: BlackjackWindow.cpp  main.cpp
